<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvEquals"
        android:layout_width="79dp"
        android:layout_height="34dp"
        android:layout_marginEnd="100dp"
        android:text="@string/button_equals"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/tvInput"
        app:layout_constraintTop_toBottomOf="@+id/tvInput" />

    <Button
        android:id="@+id/button3"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:text="@string/button_3"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <Button
        android:id="@+id/button8"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:text="@string/button_8"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/button7" />

    <Button
        android:id="@+id/buttonRightBracket"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:background="#D4EDB6"
        android:text="@string/button_rightBracket"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonLeftBracket"
        app:layout_constraintStart_toEndOf="@+id/buttonLeftBracket" />

    <Button
        android:id="@+id/button5"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:text="@string/button_5"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="#D4EDB6"
        android:text="@string/button_plus"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:text="@string/button_2"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/button1"
        app:layout_constraintStart_toEndOf="@+id/button1" />

    <Button
        android:id="@+id/button7"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_7"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button9"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:text="@string/button_9"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <Button
        android:id="@+id/buttonLeftBracket"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="#D4EDB6"
        android:text="@string/button_leftBracket"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDot" />

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_dot"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button0"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:text="@string/button_0"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDot"
        app:layout_constraintStart_toEndOf="@+id/buttonDot" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="#D4EDB6"
        android:text="@string/button_multiply"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button9" />

    <Button
        android:id="@+id/button1"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:text="@string/button_1"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOutput" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="#D4EDB6"
        android:text="@string/button_divide"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonClear"
        app:layout_constraintStart_toEndOf="@+id/buttonClear" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="#E6DA72"
        android:text="@string/button_clear"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/button0"
        app:layout_constraintStart_toEndOf="@+id/button0" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="#D4EDB6"
        android:text="@string/button_minus"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="145dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:background="#4CAF50"
        android:text="@string/button_equals"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonRightBracket"
        app:layout_constraintStart_toEndOf="@+id/buttonRightBracket" />

    <Button
        android:id="@+id/button6"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:text="@string/button_6"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/button5" />

    <Button
        android:id="@+id/button4"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_4"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="321dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="#F6F4E4"
        android:text=""
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/tvInput"
        app:layout_constraintTop_toBottomOf="@+id/tvInput" />

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="322dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="#F6F4E4"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>